<resources>
    <string name="app_name">Android\nSample</string>
    <string name="content_provider_example_address_book">Content provider example \nAddress book</string>

    <!--  Main activity  -->
    <string-array name="main_item_array">
        <item>Excel</item>
        <item>Timer App Bar</item>
        <item>Picture Loader</item>
        <item>Bottom Sheet Dialog</item>
        <item>Album Data List</item>
        <item>Media Data List</item>
        <item>Music Player</item>
        <item>Video Player</item>
        <item>Address Book Data List</item>
        <item>Image Grid View</item>
        <item>Room example</item>
    </string-array>

    <!--  Permission  -->
    <string name="permission_dialog_title">Need permissions.</string>
    <string name="permission_dialog_msg">Please allow permissions.</string>
    <string name="permission_setting">Setting</string>
    <string name="permission_close">Close</string>

    <string name="album_divider">|</string>

    <!-- Room activity -->
    <string name="room_example">Room Example</string>
    <string name="user_list">User List</string>
    <string name="pet_list">Pet List</string>
    <string name="pet">Pet</string>
    <string name="user">User</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="action">Action</string>

    <!--  Excel Activity  -->
    <string name="name">Name</string>
    <string name="input_time">Input Time</string>
    <string name="check_out">Check out</string>

    <!--  Default  -->
    <string name="confirm">Confirm</string>
</resources>
