<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".room.RoomActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_hor_40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <TextView
            android:id="@+id/tv_room_example"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_example"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_user_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/user_list"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_room_example" />

        <TextView
            android:id="@+id/tv_pet_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/pet_list"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/view_ver_list_divider"
            app:layout_constraintTop_toBottomOf="@id/tv_room_example" />

        <View
            android:id="@+id/view_hor_divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="4dp"
            android:background="#bbbbbb"
            app:layout_constraintTop_toBottomOf="@id/tv_user_list"
            tools:layout_editor_absoluteX="16dp" />

        <View
            android:id="@+id/view_ver_list_divider"
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:background="#bbbbbb"
            app:layout_constraintBottom_toTopOf="@id/gl_hor_40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_hor_divider" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sv_user"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/gl_hor_40"
            app:layout_constraintEnd_toStartOf="@id/view_ver_list_divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_hor_divider" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sv_pet"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/gl_hor_40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/view_ver_list_divider"
            app:layout_constraintTop_toBottomOf="@+id/view_hor_divider" />

        <View
            android:id="@+id/view_divider_gl_60"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#bbbbbb"
            app:layout_constraintTop_toTopOf="@id/gl_hor_40" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_layout_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gl_hor_40">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:hint="User" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/bt_user_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Action"
            app:layout_constraintBottom_toBottomOf="@id/et_layout_user"
            app:layout_constraintStart_toEndOf="@id/et_layout_user"
            app:layout_constraintTop_toTopOf="@id/et_layout_user" />

        <RadioGroup
            android:id="@+id/rg_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/bt_user_action"
            app:layout_constraintStart_toEndOf="@id/bt_user_action"
            app:layout_constraintTop_toTopOf="@id/bt_user_action">

            <RadioButton
                android:id="@+id/rb_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add" />

            <RadioButton
                android:id="@+id/rb_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Remove" />

        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_layout_pet_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_layout_user">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:hint="Index" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_layout_pet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/et_layout_pet_index"
            app:layout_constraintTop_toBottomOf="@id/et_layout_user">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:hint="Pet" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/bt_pet_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Action"
            app:layout_constraintBottom_toBottomOf="@id/et_layout_pet"
            app:layout_constraintStart_toEndOf="@id/et_layout_pet"
            app:layout_constraintTop_toTopOf="@id/et_layout_pet" />

        <RadioGroup
            android:id="@+id/rg_pet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/bt_pet_action"
            app:layout_constraintStart_toEndOf="@id/bt_pet_action"
            app:layout_constraintTop_toTopOf="@id/bt_pet_action">

            <RadioButton
                android:id="@+id/rb_pet_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add" />

            <RadioButton
                android:id="@+id/rb_pet_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Remove" />

        </RadioGroup>

        <ScrollView
            android:id="@+id/sv_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_layout_pet">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_contents_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/tv_user_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.38"
                    tools:text="User contents" />

                <View
                    android:id="@+id/view_ver_content_divider"
                    android:layout_width="2dp"
                    android:layout_height="0dp"
                    android:background="#bbbbbb"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_pet_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.57"
                    tools:text="Pet contents" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>